Updating build.xml

--- a/javacs-lab12/build.xml
+++ b/javacs-lab12/build.xml
@@ -405,11 +405,6 @@
             <classpath refid="JavaCS.classpath"/>
         </java>
     </target>
-    <target name="WikiSorter">
-        <java classname="com.flatironschool.javacs.WikiSorter" failonerror="true" fork="yes">
-            <classpath refid="JavaCS.classpath"/>
-        </java>
-    </target>
     <target name="WikiPhilosophyTest">
         <mkdir dir="${junit.output.dir}"/>
         <junit fork="yes" printsummary="withOutAndErr">
@@ -439,6 +434,19 @@
             <formatter type="xml"/>
             <formatter type="plain" usefile="no" />
             <test name="com.flatironschool.javacs.WikiSearchTest" todir="${junit.output.dir}"/>
+            <classpath refid="JavaCS.classpath"/>
+        </junit>
+    </target>
+    <target name="ListSorter">
+        <java classname="com.flatironschool.javacs.ListSorter" failonerror="true" fork="yes">
+            <classpath refid="JavaCS.classpath"/>
+        </java>
+    </target>
+    <target name="ListSorterTest">
+        <mkdir dir="${junit.output.dir}"/>
+        <junit fork="yes" printsummary="withOutAndErr">
+            <formatter type="xml"/>
+            <test name="com.flatironschool.javacs.ListSorterTest" todir="${junit.output.dir}"/>
             <classpath refid="JavaCS.classpath"/>
         </junit>
     </target>
