--- a/javacs-lab12/build.xml
+++ b/javacs-lab12/build.xml
@@ -21,6 +21,8 @@
         <pathelement location="lib/ant-junit.jar"/>
         <pathelement location="lib/commons-math3-3.6.jar"/>
         <pathelement location="lib/hamcrest-library-1.3.jar"/>
+        <pathelement location="lib/jopt-simple-5.0.2.jar"/>
+        <pathelement location="lib/jopt-simple-5.0.2.jar"/>
     </path>
     <target name="init">
         <mkdir dir="bin"/>
@@ -369,6 +371,11 @@
     </target>
     <target name="Crawler">
         <java classname="com.flatironschool.javacs.Crawler" failonerror="true" fork="yes">
+            <classpath refid="JavaCS.classpath"/>
+        </java>
+    </target>
+    <target name="QueryParser">
+        <java classname="com.flatironschool.javacs.QueryParser" failonerror="true" fork="yes">
             <classpath refid="JavaCS.classpath"/>
         </java>
     </target>
