--- a/javacs-lab12/build.xml
+++ b/javacs-lab12/build.xml
@@ -374,6 +374,11 @@
             <classpath refid="JavaCS.classpath"/>
         </java>
     </target>
+    <target name="Front">
+        <java classname="com.flatironschool.javacs.Front" failonerror="true" fork="yes">
+            <classpath refid="JavaCS.classpath"/>
+        </java>
+    </target>
     <target name="QueryParser">
         <java classname="com.flatironschool.javacs.QueryParser" failonerror="true" fork="yes">
             <classpath refid="JavaCS.classpath"/>
